--- a/onlinestore/static/css/base.css
+++ b/onlinestore/static/css/base.css
@@ -6,6 +6,14 @@ body {
     font-family:helvetica, sans-serif;
 }
 
+hr {
+    width: 90%;
+    border: 0;
+    height: 1px;
+    background: rgb(0 0 0 / 38%);
+    opacity: 0.2;
+}
+
 img {
     max-width: 100%;
 }
@@ -208,14 +216,14 @@ ul.errorlist {
 .order-info {
     float:right;
     width:300px;
-    background:#efefef;
-    padding:10px 20px;
-    color:#333;
-    border-bottom:4px solid #5993bb;
+    /* background:#efefef; */
+    /* padding:10px 20px; */
+    color:#254f37;
+    border-bottom:4px solid #254f37;
 }
 
 .order-info h3 {
-    color:#5993bb;
+    color:#254f37;
 }
 
 .order-info ul li {
