--- a/payment/templates/payment/process.html
+++ b/payment/templates/payment/process.html
@@ -6,10 +6,12 @@
 {% endblock title %}
 
 {% block content %}
-    <h1>使用第三方金流付款</h1>
+    <h1>使用 PayPal 付款</h1>
     {{ form.render }}
     <h1>使用綠界付款</h1>
-    <a href="/payment/ecpay"></a>
+    <a href="/payment/ecpay">
+        <img src="{% static 'img/ecpay_go.png' %}"">
+    </a>
 {% endblock content %}
 
 
