--- a/payment/templates/payment/process.html
+++ b/payment/templates/payment/process.html
@@ -6,12 +6,19 @@
 {% endblock title %}
 
 {% block content %}
-    <h1>使用 PayPal 付款</h1>
-    {{ form.render }}
-    <h1>使用綠界付款</h1>
-    <a href="/payment/ecpay">
-        <img src="{% static 'img/ecpay_go.png' %}"">
-    </a>
+    <div class="d-flex justify-content-around">
+        <div class="">
+            <h1>使用 PayPal 付款</h1>
+                {{ form.render }}
+        </div>
+        <div class="">
+            <h1>使用綠界付款</h1>
+                <a href="/payment/ecpay">
+                    <img src="{% static 'img/ecpay_go.png' %}"">
+                </a>
+        </div>
+    </div>
+    
 {% endblock content %}
 
 
