--- a/payment/templates/payment/process.html
+++ b/payment/templates/payment/process.html
@@ -13,7 +13,7 @@
         </div>
         <div class="">
             <h1>使用綠界付款</h1>
-                <a href="/payment/ecpay">
+                <a href="https://hsveg-django.herokuapp.com/payment/ecpay">
                     <img src="{% static 'img/ecpay_go.png' %}"">
                 </a>
         </div>
